--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -2,17 +2,21 @@
 <div class="container paging">
     <div class="row">
         <div class="col s6 m4 l4">
-            <a href="#!" class="left btn-floating btn-large waves-effect waves-light bf-color">
+            {{#if prev}}
+            <a href="{{page_url prev}}" class="left btn-floating btn-large waves-effect waves-light bf-color">
                 <i class="fa fa-angle-left"></i>
             </a>
+            {{/if}}
         </div>
         <div class="page-info col m4 l4 hide-on-small-only">
-            <div class="center-align b-text-gray">第 1 页 / 共 2 页</div>
+            <div class="center-align b-text-gray">第 {{page}} 页 / 共 {{pages}} 页</div>
         </div>
         <div class="col s6 m4 l4">
+            {{#if next}}
             <a href="#!" class="right btn-floating btn-large waves-effect waves-light bf-color">
                 <i class="fa fa-angle-right"></i>
             </a>
+            {{/if}}
         </div>
     </div>
 </div>
