--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -45,8 +45,8 @@
         {{/if}}
         <hr>
         <li>
-            <a href="settings.html" class="waves-effect waves-light">
-                <i class="fa fa-gear fa-lg fa-fw"></i>设 置
+            <a id="themeHandle" class="waves-effect waves-light">
+                <i class="fa fa-gear fa-lg fa-fw"></i>主题设置
             </a>
         </li>
     </ul>
