--- a/partials/theme_change.hbs
+++ b/partials/theme_change.hbs
@@ -1,4 +1,4 @@
-<!-- 主题颜色设置 -->
+{{! 桌面端主题颜色设置}}
 <div id="theme-change" left="-200" class="hide-on-med-and-down">
     <div class="theme-change-handle">
         <i class="fa fa-gear fa-lg fa-spin bf-text-color"></i>
@@ -14,6 +14,21 @@
                 <li class="bf-red" data-colors="red"></li>
                 <li class="bf-purple" data-colors="purple"></li>
             </ul>
+        </div>
+    </div>
+</div>
+
+{{! 移动端的主题设置}}
+<div id="themeModal" class="modal bottom-sheet hide-on-large-only">
+    <div class="modal-content">
+        <h4>设置主题</h4>
+        <div class="container row theme-settings">
+            <div class="col bf-blue waves-effect waves-light" data-colors="blue"></div>
+            <div class="col bf-pink waves-effect waves-light" data-colors="pink"></div>
+            <div class="col bf-orange waves-effect waves-light" data-colors="orange"></div>
+            <div class="col bf-green waves-effect waves-light" data-colors="green"></div>
+            <div class="col bf-red waves-effect waves-light" data-colors="red"></div>
+            <div class="col bf-purple waves-effect waves-light" data-colors="purple"></div>
         </div>
     </div>
 </div>
