修改hr标签的颜色为#ccc

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -58,7 +58,7 @@ p {
 hr {
     margin: 12px 0;
     border: 0;
-    border-top: 1px solid #999;
+    border-top: 1px solid #ccc;
 }
 blockquote {
     border-left: 5px solid #27ae60;
