--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -7,10 +7,9 @@
                     <a href="{{@blog.url}}" class="waves-effect waves-light">
                         {{#if @blog.logo}}
                         <img src="{{@blog.logo}}" class="logo-img hide-on-small-only">
-                        {{else}}
-                        <!-- <span class="logo-span">{{@blog.title}}</span> -->
-                        <span class="logo-span">Blinkfox</span>
                         {{/if}}
+                        <!-- <span class="logo-span">{{@blog.title}}</span> -->
+                        <span class="logo-span">闪烁之狐</span>
                     </a>
                 </div>
 
