--- a/post.hbs
+++ b/post.hbs
@@ -1,5 +1,8 @@
 {{!< default}}
 
+{{! 博文详情导航}}
+{{> header_detail}}
+
 {{! 主要内容}}
 <main class="content">
     {{! 文章内容 }}
@@ -92,3 +95,6 @@
     </div>
     {{/post}}
 </main>
+
+{{! 移动端分析的底部弹出模态框}}
+{{> mobile_share}}
