--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -8,8 +8,7 @@
                         {{#if @blog.logo}}
                         <img src="{{@blog.logo}}" class="logo-img hide-on-small-only">
                         {{/if}}
-                        <!-- <span class="logo-span">{{@blog.title}}</span> -->
-                        <span class="logo-span">闪烁之狐</span>
+                        <span class="logo-span">{{@blog.title}}</span>
                     </a>
                 </div>
 
