--- a/index.hbs
+++ b/index.hbs
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m12 l12">
-                    <h2 class="heading">{{@blog.title}}</h2>
+                    <h3 class="heading">{{@blog.description}}</h3>
                 </div>
             </div>
         </div>
@@ -22,14 +22,10 @@
         <div class="card">
             <div class="card-content">
                 <i class="fa fa-volume-up fa-lg fa-fw bf-text-color"></i>
-                {{#if @blog.description}}
-                    {{@blog.description}}
-                {{else}}
-                    梦想面前做好自信的自己，自信可以改变未来。
-                    每一朵花都有开放的理由，你要始终坚信， 你就是你，一个独一无二的你，任何人都无法替代，不要因为别人的否定就轻易放弃，
-                    活在别人的世界里是一种悲哀，你要活出自己的本色。只要心在，梦就在，成功之前总是会遭受很多的磨砺， 但是只要坚持做好手边的事，
-                    自然会有意外不到的收获。
-                {{/if}}
+                梦想面前做好自信的自己，自信可以改变未来。
+                每一朵花都有开放的理由，你要始终坚信， 你就是你，一个独一无二的你，任何人都无法替代，不要因为别人的否定就轻易放弃，
+                活在别人的世界里是一种悲哀，你要活出自己的本色。只要心在，梦就在，成功之前总是会遭受很多的磨砺， 但是只要坚持做好手边的事，
+                自然会有意外不到的收获。
             </div>
         </div>
     </div>
