--- a/partials/header_detail.hbs
+++ b/partials/header_detail.hbs
@@ -2,6 +2,21 @@
 <header class="navbar-fixed">
     <nav id="headNav" class="bf-color none-shadow">
         <div id="navContainer" class="container">
+            <div class="nav-wrapper hide-on-med-and-down">
+                <div class="brand-logo">
+                    <a href="{{@blog.url}}" class="waves-effect waves-light">
+                        {{#if @blog.logo}}
+                        <img src="{{@blog.logo}}" class="logo-img hide-on-small-only">
+                        {{/if}}
+                        <span class="logo-span">{{@blog.title}}</span>
+                    </a>
+                </div>
+
+                {{! 导航菜单 }}
+                {{navigation}}
+            </div>
+
+            {{! 移动端详情的导航方式}}
             <div class="nav-wrapper hide-on-large-only">
                 <a href="javascript: history.go(-1);" class="left go-back waves-effect waves-light">
                     <i class="fa fa-arrow-left fa-lg"></i>
