--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -6,7 +6,7 @@
             {{! 文章特色图 }}
             <div class="card-image">
                 {{#if image}}
-                <img src="{{image}}" alt="{{title}}">
+                <img src="{{image}}" class="responsive-img" alt="{{title}}">
                 {{else}}
                 <img src="{{asset "images/default.jpg"}}" alt="{{title}}">
                 {{/if}}
