--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -4,7 +4,7 @@
         <div class="col s12 m12 l8 copy-right">
             本站由&copy;<a href="http://blinkfox.com" target="_blank">Blinkfox</a>基于
             <a href="http://ghost.org/" target="_blank">Ghost</a> 采用
-            <a href="https://github.com/chenjiayin1990/ghost-matery" target="_blank">ghost-matery</a>主题搭建. 蜀ICP备15029027号
+            <a href="https://github.com/blinkfox/ghost-matery2" target="_blank">ghost-matery2</a>主题搭建. 蜀ICP备15029027号
         </div>
         <div class="col s12 m12 l4 social-link hide-on-med-and-down">
             <a href="https://github.com/blinkfox" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
