文章详情一个样式的修改

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -343,7 +343,7 @@ article .article-tags .chip {
     margin-right: 30px;
 }
 #artDetail .article-card-content {
-    padding: 0px 20px 20px;
+    padding: 0px 20px 20px 25px;
 }
 #artDetail .article-share {
     margin-top: 10px;
