修改手机端社交链接的显示

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -228,7 +228,7 @@ header .side-nav .social-link {
     padding-left: 10px;
 }
 .social-link a {
-    display: initial;
+    display: inline;
     padding: 0 12px;
 }
 header .go-back {
