改了下桌面端主题切换的设置按钮不旋转了

--- a/partials/theme_change.hbs
+++ b/partials/theme_change.hbs
@@ -1,7 +1,7 @@
 {{! 桌面端主题颜色设置}}
 <div id="theme-change" left="-200" class="hide-on-med-and-down">
     <div class="theme-change-handle">
-        <i class="fa fa-gear fa-lg fa-spin bf-text-color"></i>
+        <i class="fa fa-gear fa-lg bf-text-color"></i>
     </div>
     <div class="theme-change-container">
         <h6>主题颜色面板</h6>
