修改了RSS无连接的问题

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -16,7 +16,7 @@
             <a href="#!" class="tooltipped" data-tooltip="QQ号：1181062873" data-position="top" data-delay="50">
                 <i class="fa fa-qq fa-lg"></i>
             </a>
-            <a href="#!" class="tooltipped" data-tooltip="RSS" target="_blank" data-position="top" data-delay="50">
+            <a href="{{@blog.url}}/rss/" class="tooltipped" data-tooltip="RSS" target="_blank" data-position="top" data-delay="50">
                 <i class="fa fa-rss fa-lg"></i>
             </a>
         </div>
