修改移动端文章详情页的返回方式

--- a/partials/header_detail.hbs
+++ b/partials/header_detail.hbs
@@ -18,7 +18,7 @@
 
             {{! 移动端详情的导航方式}}
             <div class="nav-wrapper hide-on-large-only">
-                <a href="javascript: history.go(-1);" class="left go-back waves-effect waves-light">
+                <a href="{{@blog.url}}" class="left go-back waves-effect waves-light">
                     <i class="fa fa-arrow-left fa-lg"></i>
                 </a>
                 <div class="brand-logo">
