新增瀑布流的滚动效果

--- a/default.hbs
+++ b/default.hbs
@@ -18,6 +18,7 @@
     <link type="text/css" rel="stylesheet" href="{{asset "plugins/awesome/css/font-awesome.min.css"}}" />
     {{! import styles }}
     <link type="text/css" rel="stylesheet" href="{{asset "plugins/materialize/css/materialize.min.css"}}" />
+    <link type="text/css" rel="stylesheet" href="{{asset "plugins/aos/aos.css"}}" />
     <link type="text/css" rel="stylesheet" href="{{asset "plugins/prism/prism.css"}}" />
     <link type="text/css" rel="stylesheet" href="{{asset "css/screen.css"}}" />
 
@@ -51,6 +52,7 @@
     <script type="text/javascript" src="{{asset "plugins/materialize/js/materialize.min.js"}}"></script>
     <!-- <script type="text/javascript" src="http://cdn.bootcss.com/masonry/4.0.0/masonry.pkgd.min.js"></script> -->
     <script type="text/javascript" src="{{asset "plugins/masonry/masonry.pkgd.min.js"}}"></script>
+    <script type="text/javascript" src="{{asset "plugins/aos/aos.js"}}"></script>
     <script type="text/javascript" src="{{asset "plugins/prism/prism.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 </body>
