--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,6 +1,6 @@
 {{! 文章列表的循环 }}
 {{#foreach posts}}
-<div class="article col s12 m6 l4">
+<div class="article col s12 m6 l4" data-aos="fade-up">
     <div class="card">
         <a href="{{url}}">
             {{! 文章特色图 }}
