--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -3,7 +3,7 @@
     <div class="container row center-align">
         <div class="col s12 m12 l8 copy-right">
             本站由&copy;<a href="http://blinkfox.com" target="_blank">Blinkfox</a>基于
-            <a href="http://ghost.org/" target="_blank">Ghost</a> 采用
+            <a href="http://ghost.org/" target="_blank">Ghost Blog</a> 采用
             <a href="https://github.com/blinkfox/ghost-matery2" target="_blank">ghost-matery2</a>主题搭建. 蜀ICP备15029027号
         </div>
         <div class="col s12 m12 l4 social-link hide-on-med-and-down">
@@ -16,7 +16,7 @@
             <a href="#!" class="tooltipped" data-tooltip="QQ号：1181062873" data-position="top" data-delay="50">
                 <i class="fa fa-qq fa-lg"></i>
             </a>
-            <a href="#!" class="tooltipped" data-tooltip="RSS" target="_blank" data-position="top" data-delay="50">
+            <a href="{{@blog.url}}/rss/" class="tooltipped" data-tooltip="RSS" target="_blank" data-position="top" data-delay="50">
                 <i class="fa fa-rss fa-lg"></i>
             </a>
         </div>
