--- a/default.hbs
+++ b/default.hbs
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
     <title>{{meta_title}}</title>
-    <meta name="description" content="{{meta_description}}">
-    <meta name="keywords" content="matery2 , ghost-matery ,Ghost, blog, Ghost博客, Ghost主题, Ghost theme">
+    <meta name="keywords" content="matery2 , ghost-matery2 ,Ghost, blog, Ghost博客, Ghost主题, Ghost theme">
     <meta name="HandheldFriendly" content="True" />
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,6 +17,7 @@
     <link type="text/css" rel="stylesheet" href="{{asset "plugins/awesome/css/font-awesome.min.css"}}" />
     {{! import styles }}
     <link type="text/css" rel="stylesheet" href="{{asset "plugins/materialize/css/materialize.min.css"}}" />
+    <link type="text/css" rel="stylesheet" href="{{asset "plugins/aos/aos.css"}}" />
     <link type="text/css" rel="stylesheet" href="{{asset "plugins/prism/prism.css"}}" />
     <link type="text/css" rel="stylesheet" href="{{asset "css/screen.css"}}" />
 
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="{{asset "plugins/materialize/js/materialize.min.js"}}"></script>
     <!-- <script type="text/javascript" src="http://cdn.bootcss.com/masonry/4.0.0/masonry.pkgd.min.js"></script> -->
     <script type="text/javascript" src="{{asset "plugins/masonry/masonry.pkgd.min.js"}}"></script>
+    <script type="text/javascript" src="{{asset "plugins/aos/aos.js"}}"></script>
     <script type="text/javascript" src="{{asset "plugins/prism/prism.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 </body>
