--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,12 +1,12 @@
 {{! 文章列表的循环 }}
 {{#foreach posts}}
-<div class="article col s12 m6 l4">
+<div class="article col s12 m6 l4" data-aos="fade-up">
     <div class="card">
         <a href="{{url}}">
             {{! 文章特色图 }}
             <div class="card-image">
-                {{#if image}}
-                <img src="{{image}}" class="responsive-img" alt="{{title}}">
+                {{#if feature_image}}
+                <img src="{{feature_image}}" class="responsive-img" alt="{{title}}">
                 {{else}}
                 <img src="{{asset "images/default.jpg"}}" alt="{{title}}">
                 {{/if}}
